--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -314,7 +314,9 @@ body {
 }
 @media screen and (min-width: 300px) and (max-width: 480px) {
   .main .container .short-item {
-    width: 95%;
+    width: 70%;
+    margin: 0 auto;
+    display: block;
   }
 }
 .main .container .short-item img {
